tests/lean/varBinderUpdate.lean.expected.out
f Nat 5 : Nat
g 5 : Nat
Ex1.f (α : Type) [Add α] (a : α) : α
Ex1.g {α : Type} (b : α) : α
f Nat 5 : Nat
g 5 : Nat
Ex2.f (α : Type) (a : α) : α
Ex2.g {β : Type} (b : β) : β
varBinderUpdate.lean:25:10-25:11: error: redundant binder annotation update
Ex3.g (α : Type) (f : α → α) (a : α) : α
Ex3.h (α : Type) {f : α → α} (a : α) : α
g Nat Bool 10 "hello" true : Nat × String × Bool
varBinderUpdate.lean:51:10-51:11: error: cannot change the binder annotation of the previously declared local instance `i`
varBinderUpdate.lean:59:10-59:11: error: cannot update binder annotation of variables with default values/tactics
